@@ -4,6 +4,7 @@
 - don't turn top-level html comments into non-comments. in BS4, Comment is a subclass of NavigableString! Thanks @G4OEU!
 - removed redundant enclose_text()
 - `--make=kindle` and `--make=all` no longer make `kindle.noimages`
+- stop warning about external links that start with 'https://www.gutenberg.org/'
 
 0.12.13 September 23, 2022
 - fix reversion in txt production because GutenbergTextParser needs caching
